web: rename status to state and use it directly
without getElementById

--- a/sendrecv/js/index.html
+++ b/sendrecv/js/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <div><video id="video" autoplay playsinline>Your browser doesn't support video</video></div>
-    <div>Status: <span id="status">unknown</span></div>
+    <div>Status: <span id="state">unknown</span></div>
     <div><textarea id="text" cols=40 rows=4></textarea></div>
     <div>Our id is <b id="peer-id">unknown</b></div>
     <br/>
